Modify directory structure

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>top</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -15,16 +15,16 @@
       <nav>
         <ul>
           <li><a href="index.html">トップページ</a></li>
-          <li><a href="company.html">会社概要</a></li>
-          <li><a href="work.html">事業内要</a></li>
-          <li><a href="recruit.html">採用情報</a></li>
-          <li><a href="contact.html">お問い合わせ</a></li>
+          <li><a href="html/company.html">会社概要</a></li>
+          <li><a href="html/work.html">事業内要</a></li>
+          <li><a href="html/recruit.html">採用情報</a></li>
+          <li><a href="html/contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
     </div>
   </header>
   <section class="mainvisual">
-    <img src="../images/mainvisual.jpeg" alt="溶接作業">
+    <img src="images/mainvisual.jpeg" alt="溶接作業">
     <h2>ものづくりが好き</h2>
     <div class="bg1"></div>
   </section>
@@ -32,7 +32,7 @@
     <section class="greeting">
       <div class="content-wrapper">
         <div class="contents">
-          <figure><img src="../images/drill.jpeg" alt="ドリル"></figure>
+          <figure><img src="images/drill.jpeg" alt="ドリル"></figure>
           <div class="content">
             <h2>ものづくりとは</h2>
             <p>本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。本文が入ります。<br>
@@ -66,7 +66,7 @@
     </section>
     <section class="recruit">
       <div class="recruit-img">
-        <img src="../images/handshake.jpeg" alt="握手">
+        <img src="images/handshake.jpeg" alt="握手">
       </div>
       <h2><a href="#">採用情報</a></h2>
     </section>
@@ -83,10 +83,10 @@
       </div>
       <ul>
         <li><a href="index.html">トップページ</a></li>
-        <li><a href="company.html">会社概要</a></li>
-        <li><a href="work.html">事業内容</a></li>
-        <li><a href="recruit.html">採用情報</a></li>
-        <li><a href="contact.html">お問い合わせ</a></li>
+        <li><a href="html/company.html">会社概要</a></li>
+        <li><a href="html/work.html">事業内容</a></li>
+        <li><a href="html/recruit.html">採用情報</a></li>
+        <li><a href="html/contact.html">お問い合わせ</a></li>
       </ul>
     </div>
     <div class="copyright">
