--- a/html/work.html
+++ b/html/work.html
@@ -12,7 +12,7 @@
       <h1>aratai株式会社</h1>
       <nav>
         <ul>
-          <li><a href="index.html">トップページ</a></li>
+          <li><a href="../index.html">トップページ</a></li>
           <li><a href="company.html">会社概要</a></li>
           <li><a href="work.html">事業内要</a></li>
           <li><a href="recruit.html">採用情報</a></li>
@@ -73,7 +73,7 @@
         </p>
       </div>
       <ul>
-        <li><a href="index.html">トップページ</a></li>
+        <li><a href="../index.html">トップページ</a></li>
         <li><a href="company.html">会社概要</a></li>
         <li><a href="work.html">事業内容</a></li>
         <li><a href="recruit.html">採用情報</a></li>
